sumo/tests/netconvert/import/XML/errors/broken_edge/edge#tonode__empty4/errors.netconvert
Error: Attribute 'tonode' in definition of a edge is empty.
Quitting (on error).
